--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -32,7 +32,7 @@
 				<tr>
 					<td>
 
-						<video src="duolingo.mp4" controls>
+						<video src="" controls>
 						  Your browser does not support the <code>video</code> element.
 						</video>
 							
@@ -42,6 +42,8 @@
 		</div>
 	</div>
 </div>
+
+
 
 
 
