--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,6 +38,10 @@
 
       	<% end %>
 
+        <tr>
+          <td><img id="post-its" src="http://hosting1.disentropy.net/ptblog/wp-content/uploads/2011/05/postit.png" width: "1000" height= "300"></td>
+        </tr>
+
       <div id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
@@ -66,7 +70,8 @@
                   </p>
               </td>
             </tr>
-      </div>
+        </div>
+    </div>
         <% end %>
       </div>
   </article>
