--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -31,17 +31,24 @@
 				<th> Latest videos </th> 
 				<tr>
 					<td>
-
-						<video src="" controls>
-						  Your browser does not support the <code>video</code> element.
-						</video>
-							
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
 					</td>
 				</tr>
 			</table>
 		</div>
 	</div>
-</div>
+	
+			<div class="col-md-6">
+				<table id="ivoox-table">
+				<th> Latest podcasts </th> 
+				<tr>
+					<td>
+						<iframe src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" style="border: 1px solid #D7D7D7;" height="440" frameborder="0" allowfullscreen="0" scrolling="no" ></iframe>
+					</td>
+				</tr>
+			</table>
+		</div>
+
 
 
 
