--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -4,14 +4,12 @@
 
 <hr>
 <div id="home-link">
-<%= link_to 'Home', root_path %><br>
-
-<%= link_to 'Class Feedback', controller: "tutors", action:"index" %><br>
-<a href="/duolingo/dashboard">Duolingo Dashboard</a>
+	<%= link_to 'Home', root_path %> / 
+	<%= link_to 'Class Interaction', controller: "tutors", action:"index" %> / 
+	<a href="/duolingo/dashboard">Duolingo Dashboard</a>
 </div>
 
 <hr>
-
         <h3 id="teachers-title2">Give your best in the class!</h3>
     </header>
      
