--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td>
-      <%= form_for :comment, url: comment_path(@comment), method: :patch do |f| %>
+      <%= form_for :answer, url: answer_path(@answer), method: :patch do |f| %>
         <p>
           <%= f.label :title %><br>
           <%= f.text_field :title %>
@@ -27,4 +27,4 @@
 
 <hr>
 
-<%= link_to 'Back', comments_path%>
+<%= link_to 'Back', answers_path%>
