--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -1,139 +1,129 @@
+<!DOCTYPE html>
+<html>
+<head>
+</head>
 
-<div id="games-header">
-	
-	<h3 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h3>
-</div>
-
-<hr>
-
-<div id="home-link">
-	<%= link_to 'Home', root_path %>
-</div>
-
-<hr>
-
-
+<body>
+			
+	<div id="games-header">
 		
-<div div="word-list">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<table id="matching_table">
-					
-					<tr>
-						<td><strong>Click on the words associated to the verb</strong> <b>PLAY</b>.</td>
-					</tr>
-					<tr>
-						<td id="doRight1">football </td> 
-					</tr>
-					<tr>
-						<td id="doRight2">ball </td> 
-					</tr>
-					<tr>
-						<td id="doWrong1">door </td>
-					</tr>
-					<tr>
-						<td id="doRight3">ground </td>
-					</tr>
-					<tr>
-						<td id="doRight4">around </td>
-					</tr>
-					<tr>
-						<td id="doRight5">chess </td>
-					</tr>
-					<tr>
-						<td id="doRight6">music </td>
-					</tr>
-					<tr>
-						<td id="doWrong2">feast </td>
-					</tr>
-					<tr>
-						<td id="doRight7">hockey </td>
-					</tr>
-					<tr>
-						<td id="doRight8">the trumpet </td>
-					</tr>
-					<tr>
-						<td id="doRight9">the piano </td>
-					</tr>
-				</table>
-			</div>
+		<h3 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h3>
+	</div>
 
-			<div id="col-md-6">
-				<table>
-				<th> YOUR SCORE </th>
-					<tr>
-						<td><b>New Player</b></td>
-						<td>
-						<div id="output">0
-						</div>
-						</td>
+	<hr>
+
+	<div id="home-link">
+		<%= link_to 'Home', root_path %>
+	</div>
+
+	<hr>
+			
+	<div div="word-list">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<table>
+						<tr>
+							<h4 id="game_instructions">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
 						</tr>
-				</table>
+						<tr>
+							<td id="doRight1">football </td> 
+							<td id="doRight2">ball </td> 
+							<td id="doWrong1">door </td>
+							<td id="doRight3">ground </td>
+							<td id="doRight4">around </td>
+							<td id="doRight5">chess </td>
+							<td id="doRight6">music </td>
+							<td id="doWrong2">feast </td>
+							<td id="doRight7">hockey </td>
+							<td id="doRight8">the trumpet </td>
+							<td id="doRight9">the piano </td>
+					
+						</tr>
+
+						<hr>
+
+					<div id="score-table">
+							<th id="score"> YOUR SCORE </th>
+								<tr>
+									<td id="player"><b>New Player</b></td>
+									<td>
+									<div id="output">0
+									</div>
+									</td>
+								</tr>
+					</div>
+					</table>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 
-<script type="text/javascript">
-	$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
-	    $('#output').html(function(i, val) { return val*1+1 });
-	});
+	<script type="text/javascript">
+		$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
+		    $('#output').html(function(i, val) { return val*1+1 });
+		});
 
-	$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
-		alert('Correct!');
-	});
+		$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
+			alert('Correct!');
+		});
 
-	$('td#doWrong1, td#doWrong2').on('click', function() {
-		alert('Wrong!');	
-	});
+		$('td#doWrong1, td#doWrong2').on('click', function() {
+			alert('Wrong!');	
+		});
 
-	$('td#doRight1').on('click', function() {
-		$('td#doRight1').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight1').on('click', function() {
+			$('td#doRight1').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight2').on('click', function() {
-		$('td#doRight2').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight2').on('click', function() {
+			$('td#doRight2').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight3').on('click', function() {
-		$('td#doRight3').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight3').on('click', function() {
+			$('td#doRight3').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight4').on('click', function() {
-		$('td#doRight4').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight4').on('click', function() {
+			$('td#doRight4').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight5').on('click', function() {
-		$('td#doRight5').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight5').on('click', function() {
+			$('td#doRight5').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight6').on('click', function() {
-		$('td#doRight6').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight6').on('click', function() {
+			$('td#doRight6').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight7').on('click', function() {
-		$('td#doRight7').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight7').on('click', function() {
+			$('td#doRight7').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight8').on('click', function() {
-		$('td#doRight8').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight8').on('click', function() {
+			$('td#doRight8').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doRight9').on('click', function() {
-		$('td#doRight9').css('background-color', 'rgb(73,203,214)');
-	});
+		$('td#doRight9').on('click', function() {
+			$('td#doRight9').css('background-color', 'rgb(73,203,214)');
+		});
 
-	$('td#doWrong1').on('click', function() {
-		$('td#doWrong1').css('background-color', '#D11B1B');
-	});
+		$('td#doWrong1').on('click', function() {
+			$('td#doWrong1').css('background-color', '#D11B1B');
+		});
 
-	$('td#doWrong2').on('click', function() {
-		$('td#doWrong2').css('background-color', '#D11B1B');
-	});
+		$('td#doWrong2').on('click', function() {
+			$('td#doWrong2').css('background-color', '#D11B1B');
+		});
 
-</script>
+	</script>
+</body>
+<footer>
+	David Navarro, 2015
+</footer>
+</html>
 
 
 
