--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -6,7 +6,7 @@
 <body>
 			
 	<div id="home-header">
-		<h1><b> TEFL Platform for teachers & students </b></h1>
+		<h1><b> TEFL Platform for teachers and students </b></h1>
 
 		<div id="motto"><p> Educative platform fostering English learning. </p>
 		</div>
@@ -53,10 +53,10 @@
 <h3 id="welcome">Welcome back!</h3>
 
 <article>
-	<div class="container">
-		<div class="row">
-							<div class="col-md-2">
-								<h3 id="latest_posts"> Latest posts </h3>
+	<div id="home-header">
+	<h3 id="latest_posts"> Latest posts </h3>
+	</div>
+	
 									<div id="posts-titles">
 											<table> 
 												<tr>
@@ -64,7 +64,7 @@
 													<th>Title</th>
 													<th>Text</th>
 												</tr>
-										</div>
+											</div>
 
 											<div id="posts-content">
 												<% @posts.each do |post| %> 
@@ -77,20 +77,47 @@
 													</tr>		
 															<% end %>
 
+											<table>
 														<th> Leave a comment for the class </th>
+														  <tr>
+														    <td>
+														      <%= form_for :comment, url: comments_path(@comment), method: :patch do |f| %>
+														        <p>
+														          <%= f.label :title %><br>
+														          <%= f.text_field :title %>
+														        </p>
+
+														        <p>
+														          <%= f.label :name %><br>
+														          <%= f.text_field :name %>
+														        </p>
+
+														        <p>
+														          <%= f.label :text %><br>
+														          <%= f.text_area :text %>
+														        </p>
+
+														        <p>
+														          <%= f.submit %>
+														        </p>
+														      <% end %>
+														      </td>
+														  </tr>
+														</table>
+
+												</div>
 
 														<tr>
 															<td>
 														
 													<div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="1"></div>
 												</td>
-											</tr>
+														</tr>
 											</table><br>
 									</div>
-							</div>
-					</div>
-		</div>
-		
+
+									
+		<!--
 			<div id="fb-root"></div>
 			<script>(function(d, s, id) {
 						var js, fjs = d.getElementsByTagName(s)[0];
@@ -100,6 +127,7 @@
 						fjs.parentNode.insertBefore(js, fjs);
 						}(document, 'script', 'facebook-jssdk'));
 	</script>
+		--> 
 
 	 <script type="text/javascript">
 
