--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -9,38 +9,15 @@
 <%= link_to 'Home', root_path %>
 </div>
 
-<div class="col-md-6">
-				<h3>Feedback</h3>
-				<div id="comments-titles">
-				<table> 
-					<tr>
-				    <th>Name</th>
-						<th>Title</th>
-						<th>Text</th>
-					</tr>
-				</div>
-
-				<div id="comments-content">
-					<% @comments.each do |comment| %> 
-					<tr>
-				    <td><%= comment.name %></td>
-						<td><%= comment.title %></td>
-						<td><%= comment.text %></td>
-					</tr>
-
-					<% end %>
-				</table><br>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
 <hr>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
+
+<div class="container">
+	<div class="row">
+
+		<div class="col-md-8">
+			<div id="home-header">
 				<h3>Students</h3>
+			</div>
 				<div id="students-titles">
 				<table> 
 					<tr>
@@ -52,38 +29,68 @@
 			</div>
 
 				<div id="students-content">
-					<% @students.each do |student| %> 
-					<tr>
-						<td><%= student.name %></td>
-				    	<td><%= student.age %></td>
-						<td><%= student.level %></td>
-					</tr>
+						<% @students.each do |student| %> 
+						<tr>
+							<td><%= student.name %></td>
+					    	<td><%= student.age %></td>
+							<td><%= student.level %></td>
+						</tr>
 
-					<% end %>
-				</table><br>
+						<% end %>
+					</table><br>
 				</div>
 			</div>
+			
+		<div class="col-md-8">
+					<div id="home-header">
+						<h3>Feedback</h3>
+					</div>
+						<div id="comments-titles">
+						<table> 
+							<tr>
+						    <th>Name</th>
+								<th>Title</th>
+								<th>Text</th>
+							</tr>
+						</div>
+
+						<div id="comments-content">
+							<% @comments.each do |comment| %> 
+							<tr>
+						    <td><%= comment.name %></td>
+								<td><%= comment.title %></td>
+								<td><%= comment.text %></td>
+							</tr>
+
+							<% end %>
+						</table><br>
+					</div>
+				</div>
+
+<div class="col-md-8">
+					<div id="home-header">
+					<h3>Posts</h3>
+					</div>
+					<div id="posts-titles">
+					<table> 
+						<tr>
+					    	<th>Name</th>
+							<th>Title</th>
+							<th>Text</th>
+						</tr>
+					</div>
+
+					<div id="posts-content">
+						<% @posts.each do |post| %> 
+						<tr>
+					    	<td><%= post.name %></td>
+							<td><%= post.title %></td>
+							<td><%= post.text %></td>
+						</tr>
+
+						<% end %>
+					</table><br>
+				</div>
+		</div>
+	</div>
 </div>
-
-<h3>Posts</h3>
-<div id="posts-titles">
-<table> 
-	<tr>
-    	<th>Name</th>
-		<th>Title</th>
-		<th>Text</th>
-	</tr>
-</div>
-
-<div id="posts-content">
-	<% @posts.each do |post| %> 
-	<tr>
-    	<td><%= post.name %></td>
-		<td><%= post.title %></td>
-		<td><%= post.text %></td>
-	</tr>
-
-	<% end %>
-</table><br>
-</div>
-
