--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -1,3 +1,46 @@
+<div id="top-bar">
+			<nav id="nav_bar">
+
+				<ul class="nav nav-pills">
+				  <li role="presentation" class="active"><span id="teachers-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
+										</span><a href="/teachers">TEACHERS</a>
+									</li>
+
+				  <li role="presentation"><span id="student-link">
+										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
+									</span><a href="/students">STUDENTS</a>
+								</li>
+			
+				  <li role="presentation"><span id="tools-link">
+										<img id="tools" src="http://icons.iconarchive.
+										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
+									</span><a href="/tools">TOOLS</a>
+								</li>
+									
+
+				   <li role="presentation"><span id="games-link">
+										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
+								</span><a href="/games">GAMES</a>
+							</li>
+				    <li role="presentation"><span id="media-link">
+										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
+								</span><a href="/media">MEDIA</a>
+							</li>
+
+				     <li role="presentation"><span id="posts-link">
+										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
+								</span><a href="/posts">POSTS</a>
+								</li>
+
+				      <li role="presentation"><span id="contact-link">
+										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
+								</span><a href="contact">CONTACT</a>
+								</li>
+				</ul>
+			</div>
+	</nav>
+</div>
 <div id="tutors-header">
 	
 	<h1 id="tutors-title"><img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46"> Tutor's Index </h1>
