--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -27,16 +27,25 @@
 
 
 
+html {
+   height: 100%; 
+}
 
+div#top-bar {
+   position: fixed; 
+   top: 0; 
+   left: 0; 
+   width: 100%; 
+   height: 80px;  
+   background-color: #49CBD6;  
+   padding: 5px;
+}
 
-
-
-
-
-
-
-
-div#home-header {
+div#home-header { 
+   width: 250px; 
+   margin-left: 170px;
+   margin-top: 50px; 
+   padding: 1px; 
    text-align: center; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
@@ -44,8 +53,10 @@ div#home-header {
 }
 
 h1 {  
+   text-align: center; 
+   margin-top: 20%; 
    margin-left: 10%; 
-   margin-right: 10%; 
+   margin-right: 10%;
    padding:20px; 
    font-family: verdana; 
    font-size: 25px;
@@ -56,6 +67,7 @@ h1 {
 }
 
 div#motto {
+   text-align: center; 
    margin-left: 10%; 
    margin-right: 10%; 
    padding-bottom: 10px; 
@@ -67,23 +79,25 @@ button#like-button, a:hover {
     background-color: #49CBD6;
 } 
 
-h3#latest_posts, h3#latest_feedback{
+h3#latest_post, h3#latest_feedback{
+
    padding: 10px;   
 }
 
-h3 {
-   float: auto; 
-   margin-left: 10%; 
-   margin-right: 10%; 
-   margin-top: 30px;
-   margin-bottom: 20px; 
+table#post-comments-home {
+   margin-top: 10px; 
+   margin-left: 390px; 
+   background-color: #49CBD6;
+   border-radius: 20px 20px 20px 20px; 
 }
 
 body { 
    font-family: verdana; 
-   margin-left: 10%;  
-   margin-right: 10%;
+   width: 1024;
+   height: 600px; 
    margin-top: 5%; 
+   margin-right: 10%; 
+   margin-left: 10%; 
    margin-bottom: 10%; 
 } 
 
@@ -93,21 +107,24 @@ nav > img{
    margin-bottom: 20px; 
    margin-right: -40px; 
    margin-left: 30px; 
-   
 }
 
-#nav_bar > a {
+#nav_bar > span {
+   font-style: georgia; 
+   font-size: 14px;
+   text-align: auto;  
    color: black; 
 }
 
 #nav_bar{ 
-   margin-left: 10%; 
-   margin-right: 10%; 
+   text-align: center; 
+   margin-left: 5%; 
+   margin-right: 5%; 
 }
 
 #like-button {
    padding: 4px; 
-   margin-left: 200px; 
+   margin-left: 100px; 
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px;
    margin: 4px;
@@ -118,22 +135,20 @@ nav > img{
 
 table#posts {
    margin-right: 20px;
-   margin-left: 20px;  
+   margin-left: 20px;
    border-radius: 20px 30px 30px 20px;
 }
 
-span#recent-posts-header {
-   
-}
 
 h3#post-title {
+  width: 50%; 
    text-align: center; 
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
+   padding: 3px; 
+   margin-top: 100px; 
+   margin-left: 250px;
 
 }
 
@@ -141,8 +156,12 @@ div#posts-content {
    margin: 10px;
 }
 
-div#post-comments {
-   color: white; 
+table#post-comments {
+  margin-left: 150px; 
+   margin-top: 50px; 
+   color: black; 
+   background-color: #49CBD6; 
+    border-radius: 20px 20px 20px 20px; 
 }
 
 div#comments-content {
@@ -151,32 +170,26 @@ div#comments-content {
 
 img#post-its {
     position: absolute;
-    left: 0px;
     top: 0px;
+    left: 0px;
     z-index: -1;
-   margin-top: 620px;
-   margin-left: 90px
+   margin-left: 700px;
+   margin-top: 755px; 
+   margin-bottom: 20px; 
+   border-radius: 20px 20px 20px 20px; 
 } 
 
 /* Headers & Titles */
 
-div#games-header, div#student-header, div#tutors-header, div#teachers-header {
-  margin-top: 30px; 
-  margin-bottom: 40px; 
-}
-
 h1#students-wall, h3#matching-title, h1#student-title, h3#media-title {
+   width: 50%; 
    text-align: center; 
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
-   margin-left: 30px; 
-   padding: 10px; 
-   margin-top: -50px;
-   margin-left: 60px;   
+   padding: 3px; 
+   margin-top: 100px; 
+   margin-left: 250px;  
 }
 
 /* Game CSS */
@@ -190,20 +203,17 @@ td#doRight,td#doWrong {
    font-size: 16px;
 }
 
-th#score, td#player {
-}
-
 /*Tools CSS*/
 
 h3#tools-title {
+    width: 50%; 
    text-align: center; 
-   padding: 10px; 
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px;    
+   border-radius: 20px 20px 20px 20px; 
+   padding: 3px; 
+   margin-top: 100px; 
+   margin-left: 250px;  
 }
 
 img#duolingo-logo {
@@ -235,8 +245,11 @@ div#dropbox_container  {
 /*Media CSS*/
 
 h3#title, h3#media-title, h3#post-title { 
-   padding: 10px; 
-   margin-left: 60px; 
+   width: 50%; 
+   margin-left: 5px; 
+   background-color: #49CBD6;  
+   box-shadow: 0 0 1em black;
+   border-radius: 20px 20px 20px 20px; 
 }
 
 img#media-new {
@@ -255,41 +268,39 @@ table#ivoox-table {
 /*Teacher & Tutor CSS*/ 
 
 h3#teachers-title {
+   width: 50%; 
    text-align: center; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
    padding: 3px; 
-   margin-top: -38px;
-   margin-left: 60px;
+   margin-top: 100px; 
+   margin-left: 250px;
 }
 
 div#tutors-header {
-   text-align: center; 
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto; 
+   text-align: center;
+   position: fixed; 
+   top: 0; 
+   left: 0; 
+   width: 100%;
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
 }
 
 h3#title-tutor {
-   
-   text-align: center;
-   padding: 4px; 
-   margin-top: auto;
-   margin-left: auto;
-   margin-right: auto; 
+   width: 50%; 
+   margin-left: 150px; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
 }
 
 h3#teachers-title2 {
-   margin-left: 34%;
-   margin-right: 25%;
-   padding: 10px; 
+   width: 50%; 
+   margin-left: 350px;
+   margin-bottom: 20px; 
 }
 
 div#issuu-reading {
@@ -309,24 +320,19 @@ span#contact-tutor-header {
 
 th {
    font-size: 14px; 
-   margin-left: 10px; 
-   padding: 20px;
+   padding: 30px;
 }
 
 tr {
-   padding: 10px; 
+   margin-left: 5%;
+   padding: 20px; 
    
 }
 
 td {
    font-size: 14px; 
    border-radius: 20px 30px 30px 20px;
-   padding: 10px;  
-}
-
-tbody {
-   box-shadow: 0 0 1em;
-   border-radius: 20px 20px 20px 20px;
+   padding: 15px;  
 }
 
 div#word-list {
@@ -336,16 +342,14 @@ div#word-list {
 /*Links CSS */
 
 div#home-link {
-   margin-left: auto;
-   text-align: center; 
+   margin-left: 350px;
 }
 
 div#back_link {
-   text-align: center;
+    margin-left: 350px;
 }
 
-footer {
-   margin-top: 50px; 
+footer { 
    text-align: center; 
-   font-size: 10px; 
+   font-size: 14px; 
 }
