--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -2,83 +2,85 @@
 <html>
 <head>
 </head>
+		<div id="top-bar">
+			<nav id="nav_bar">
+
+				<ul class="nav nav-pills">
+				  <li role="presentation" class="active"><span id="teachers-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
+										</span><a href="/teachers">TEACHERS</a>
+									</li>
+
+				  <li role="presentation"><span id="student-link">
+										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
+									</span><a href="/students">STUDENTS</a>
+								</li>
+			
+				  <li role="presentation"><span id="tools-link">
+										<img id="tools" src="http://icons.iconarchive.
+										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
+									</span><a href="/tools">TOOLS</a>
+								</li>
+									
+
+				   <li role="presentation"><span id="games-link">
+										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
+								</span><a href="/games">GAMES</a>
+							</li>
+				    <li role="presentation"><span id="media-link">
+										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
+								</span><a href="/media">MEDIA</a>
+							</li>
+
+				     <li role="presentation"><span id="posts-link">
+										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
+								</span><a href="/posts">POSTS</a>
+								</li>
+
+				      <li role="presentation"><span id="contact-link">
+										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
+								</span><a href="contact">CONTACT</a>
+								</li>
+				</ul>
+			</div>
+	</nav>
+</div>
 
 <body>
 			
-	<div id="home-header">
 		<h1><b> TEFL Platform for teachers and students </b></h1>
 
 		<div id="motto"><p> Educative platform fostering English learning. </p>
 		</div>
-	</div>
 
 	<hr>
-
-	<nav id="nav_bar">
-			<div class="container">
-				<div class="row">
-						<div class="col-md-8">
-								<span id="nav_bar">
-
-										<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36"> 
-										<%= link_to 'Teachers', teachers_path %>
-
-										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-										<%= link_to 'Students', students_path %>
-
-										<img id="tools" src="http://icons.iconarchive.
-										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-									<%= link_to 'Tools', controller: "students", action:"tools" %>
-										
-
-										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-									<%= link_to 'Games', controller: "students", action: "games" %>
-
-										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-									<%= link_to 'Media', controller: "students", action: "media" %>
-
-										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-									<%= link_to 'Posts', controller: "posts", action: "index" %>
-
-										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-									<%= link_to 'Contact', controller: "students", action: "contact" %>
-								</span>
-						</div>
-				</div>
-			</div>
-	</nav>
-
-	<hr>
-
-<h3 id="welcome">Welcome back!</h3>
+	<h3 id="welcome">Welcome back!</h3>
 
 <article>
 	<div id="home-header">
 	<h3 id="latest_posts"> Latest posts </h3>
 	</div>
-	
-									<div id="posts-titles">
-											<table> 
-												<tr>
-											    <th>Name</th>
-													<th>Title</th>
-													<th>Text</th>
-												</tr>
-											</div>
 
-											<div id="posts-content">
-												<% @posts.each do |post| %> 
-														<tr>
-													    <td><%= post.name %></td>
-															<td><%= post.title %></td>
-															<td><%= post.text %></td>
-															<td><button type='button' id='like-button'> Like </button></td>
-		                                    <td id="likes"></td>
-													</tr>		
-															<% end %>
-
-											<table>
-														<th> Leave a comment for the class </th>
+<div id="latest_posts">
+												<table>
+													<tbody>
+													<% @posts.each do |post| %> 
+															<tr>
+														    <td><b><%= post.name %></b> / <%= Time.now %></td><br>
+														  </tr>
+														  <tr>
+																<td><%= post.text %></td>
+																<td><button type='button' id='like-button'> Like </button></td>
+			                                    <td id="likes"></td><br>
+															</tr>	
+														</tbody>	
+																<% end %>
+												</table>
+										</div>
+											   <table id="post-comments-home">
+										
+														<h4 id="welcome"> Share a comment </h4>
+										
 														  <tr>
 														    <td>
 														      <%= form_for :comment, url: comments_path(@comment), method: :patch do |f| %>
@@ -105,30 +107,15 @@
 														  </tr>
 														</table>
 
-												</div>
-
 														<tr>
 															<td>
-														
-													<div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="1"></div>
+											
 												</td>
 														</tr>
 											</table><br>
 									</div>
-
-									
-		<!--
-			<div id="fb-root"></div>
-			<script>(function(d, s, id) {
-						var js, fjs = d.getElementsByTagName(s)[0];
-						if (d.getElementById(id)) return;
-						js = d.createElement(s); js.id = id;
-						js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.3";
-						fjs.parentNode.insertBefore(js, fjs);
-						}(document, 'script', 'facebook-jssdk'));
-	</script>
-		--> 
-
+					</article>
+	
 	 <script type="text/javascript">
 
         $('button#like-button').on('click', function() {
@@ -137,7 +124,7 @@
     </script>
 </body>
 <footer>
-	David Navarro, 2015
+		David Navarro, 2015
 </footer>
 </html>
 
