--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,46 @@
+<div id="top-bar">
+			<nav id="nav_bar">
+								<span id="nav_bar">
+									<span id="teachers-link">
+										<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
+										<%= link_to 'TEACHERS', teachers_path %>
+									</span>
+
+									<span id="student-link">
+										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
+										<%= link_to 'STUDENTS', students_path %>
+									</span>
+
+									<span id="tools-link">
+										<img id="tools" src="http://icons.iconarchive.
+										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
+									<%= link_to 'TOOLS', controller: "students", action:"tools" %>
+									</span>
+
+									<span id="games-link">
+										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
+									<%= link_to 'GAMES', controller: "students", action: "games" %>
+								</span>
+
+								<span id="media-link">
+										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
+									<%= link_to 'MEDIA', controller: "students", action: "media" %>
+								</span>
+
+								<span id="posts-link">
+										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
+									<%= link_to 'POSTS', controller: "posts", action: "index" %>
+								</span>
+
+									<span id="contact-link">
+										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
+									<%= link_to 'CONTACT', controller: "students", action: "contact" %>
+								</span>
+						</span>
+			</div>
+	</nav>
+</div>
+
 <span id="student-header">
 	<h1 id="student-title"><img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> Your Class </h1>
 </span>
