--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -2,7 +2,13 @@
       <nav id="nav_bar">
 
         <ul class="nav nav-pills">
-          <li role="presentation" class="active"><span id="teachers-link">
+
+          <li role="presentation"><span id="home-link">
+                      <img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
+                    </span><a href="#">HOME</a>
+                  </li>
+          
+          <li role="presentation"><span id="teachers-link">
                       <img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
                     </span><a href="/teachers">TEACHERS</a>
                   </li>
@@ -13,8 +19,7 @@
                 </li>
       
           <li role="presentation"><span id="tools-link">
-                    <img id="tools" src="http://icons.iconarchive.
-                    com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
+                    <img id="tools" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
                   </span><a href="/tools">TOOLS</a>
                 </li>
                   
@@ -33,7 +38,7 @@
                 </span><a href="/posts">POSTS</a>
                 </li>
 
-              <li role="presentation"><span id="contact-link">
+              <li role="presentation" class="active"><span id="contact-link">
                     <img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
                 </span><a href="contact">CONTACT</a>
                 </li>
@@ -42,13 +47,7 @@
   </nav>
 </div>
 
-<span id="contact-tutor-header">
   <h3 id="title-tutor"><img id= "contact-tutor" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="46" width="46"> Contact your teacher </h3> 
-</span>
-
-<div id="home-link">
-<%= link_to 'Home', root_path %>
-</div>
 
 <hr>
 
