--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -6,7 +6,13 @@
 			<nav id="nav_bar">
 
 				<ul class="nav nav-pills">
-				  <li role="presentation" class="active"><span id="teachers-link">
+
+				<li role="presentation" class="active"><span id="home-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
+										</span><a href="#">HOME</a>
+									</li>
+
+				  <li role="presentation" <span id="teachers-link">
 											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
 										</span><a href="/teachers">TEACHERS</a>
 									</li>
