--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -13,11 +13,9 @@
                 </li>
       
           <li role="presentation"><span id="tools-link">
-                    <img id="tools" src="http://icons.iconarchive.
-                    com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
+                    <img id="tools" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
                   </span><a href="/tools">TOOLS</a>
-                </li>
-                  
+                </li>        
 
            <li role="presentation"><span id="games-link">
                     <img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
@@ -44,8 +42,6 @@
 
 <h3 id="tools-title"> Tools </h3><br>   
 
-<hr>
-    <div id="back_link"><%= link_to 'Back',root_path %></div>
 <hr>
        <div id="duolingo_container">
             <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
