--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -2,6 +2,12 @@
 			<nav id="nav_bar">
 
 				<ul class="nav nav-pills">
+
+					<li role="presentation"><span id="home-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
+										</span><a href="#">HOME</a>
+									</li>
+
 				  <li role="presentation" class="active"><span id="teachers-link">
 											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
 										</span><a href="/teachers">TEACHERS</a>
@@ -44,12 +50,6 @@
 <div id="tutors-header">
 	
 	<h1 id="tutors-title"><img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46"> Tutor's Index </h1>
-</div>
-
-<hr>
-
-<div id="home-link">
-<%= link_to 'Home', root_path %>
 </div>
 
 <hr>
