--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -27,6 +27,12 @@
 
 
 
+
+
+
+
+
+
 html {
    height: 100%; 
 }
@@ -54,7 +60,7 @@ div#home-header {
 
 h1 {  
    text-align: center; 
-   margin-top: 20%; 
+   margin-top: 10%; 
    margin-left: 10%; 
    margin-right: 10%;
    padding:20px; 
@@ -148,7 +154,7 @@ h3#post-title {
    border-radius: 20px 20px 20px 20px; 
    padding: 3px; 
    margin-top: 100px; 
-   margin-left: 250px;
+   margin-left: 300px;
 
 }
 
@@ -291,6 +297,7 @@ div#tutors-header {
 
 h3#title-tutor {
    width: 50%; 
+   margin-top: 100px;
    margin-left: 150px; 
    background-color: #49CBD6;  
    box-shadow: 0 0 1em black;
