--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,42 +1,49 @@
 <div id="top-bar">
 			<nav id="nav_bar">
-								<span id="nav_bar">
-									<span id="teachers-link">
-										<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
-										<%= link_to 'TEACHERS', teachers_path %>
-									</span>
 
-									<span id="student-link">
+				<ul class="nav nav-pills">
+
+					<li role="presentation"><span id="home-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
+										</span><a href="#">HOME</a>
+									</li>
+
+				  <li role="presentation" class="active"><span id="teachers-link">
+											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
+										</span><a href="/teachers">TEACHERS</a>
+									</li>
+
+				  <li role="presentation"><span id="student-link">
 										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-										<%= link_to 'STUDENTS', students_path %>
-									</span>
-
-									<span id="tools-link">
+									</span><a href="/students">STUDENTS</a>
+								</li>
+			
+				  <li role="presentation"><span id="tools-link">
 										<img id="tools" src="http://icons.iconarchive.
 										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-									<%= link_to 'TOOLS', controller: "students", action:"tools" %>
-									</span>
+									</span><a href="/tools">TOOLS</a>
+								</li>
+									
 
-									<span id="games-link">
+				   <li role="presentation"><span id="games-link">
 										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-									<%= link_to 'GAMES', controller: "students", action: "games" %>
-								</span>
-
-								<span id="media-link">
+								</span><a href="/games">GAMES</a>
+							</li>
+				    <li role="presentation"><span id="media-link">
 										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-									<%= link_to 'MEDIA', controller: "students", action: "media" %>
-								</span>
+								</span><a href="/media">MEDIA</a>
+							</li>
 
-								<span id="posts-link">
+				     <li role="presentation"><span id="posts-link">
 										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-									<%= link_to 'POSTS', controller: "posts", action: "index" %>
-								</span>
+								</span><a href="/posts">POSTS</a>
+								</li>
 
-									<span id="contact-link">
+				      <li role="presentation"><span id="contact-link">
 										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-									<%= link_to 'CONTACT', controller: "students", action: "contact" %>
-								</span>
-						</span>
+								</span><a href="contact">CONTACT</a>
+								</li>
+				</ul>
 			</div>
 	</nav>
 </div>
@@ -44,12 +51,6 @@
 <span id="student-header">
 	<h1 id="student-title"><img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> Your Class </h1>
 </span>
-
-<hr>
-
-<div id="home-link">
-<%= link_to 'Home', root_path %>
-</div>
 
 <hr>
 
